--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -54,6 +54,8 @@
     "Working with Reports": "Working with Reports",
     "working_with_users": "Working with Users",
     "Working with Users": "Working with Users",
+    "working_with_data_sources": "Working with Data Sources",
+    "Working with data sources": "Working with Data Sources",
     "working_with_your_data": "Working with Your Data",
     "Working with Your Data": "Working with Your Data",
     "Docs": "Docs",
